kustomize/frontend/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rag-agent-frontend-httproute
spec:
  hostnames:
    - sparkchat.bytecourier.local
    - sparkchat.bytecourier.com
  parentRefs:
    - name: rag-agent-gateway
      namespace: istio-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rag-agent-frontend
          port: 3000
